[package]
name = "d1_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.28.1"
egui = "0.28.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
duct = "0.13"
directories = "5.0.1"
strip-ansi = "0.1.0"
reqwest = { version = "0.12.7", features = ["json"] }
egui_file = "0.18.0"
rfd = "0.15.0"
